--- a/app/design/frontend/Practice/ecomm/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/layout/default.xml
@@ -7,14 +7,14 @@
 -->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
   <head>
-    <script src="//code.jquery.com/jquery-1.11.0.min.js" src_type="url" type="text/javascript" />
-    <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js" src_type="url" type="text/javascript" />
-    <script src="slick-1.8.1/slick/slick.min.js" type="text/javascript" />
-    <script src="js/main.js" type="text/javascript" />
-    <css src="slick-1.8.1/slick/slick.css"/>
-    <css src="slick-1.8.1/slick/slick-theme.css"/>
-    <css src="css/custom.css" />
-    <css src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" src_type="url" />
+        <css src="css/custom.css"/>
+        <css src="slick-1.8.1/slick/slick.css"/>
+        <css src="slick-1.8.1/slick/slick-theme.css"/>
+        <script src="js/main.js" />
+        <script src="slick-1.8.1/slick/slick.min.js" type="text/javascript" />
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" src_type="url" type="text/javascript" />
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" src_type="url" type="text/javascript" />
+        <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js" src_type="url" type="text/javascript" />
   </head>
     <body>
         <referenceBlock name="logo">
@@ -28,7 +28,7 @@
 
         <referenceContainer name="header.container">
             <!-- Đây là referenceContainer cho banner quảng cáo -->
-            <!-- <block class="Magento\Framework\View\Element\Template" name="ad.banner" template="Magento_Theme::html/header-banner.phtml" before="header.panel.wrapper"/> -->
+            <block class="Magento\Framework\View\Element\Template" name="ad.banner" template="Magento_Theme::html/header-banner.phtml" before="header.panel.wrapper"/>
             <container name="header.panel.wrapper" htmlClass="panel wrapper" htmlTag="div" before="-">
                  <container name="header.panel" label="Page Header Panel" htmlTag="div" htmlClass="panel header"> 
                     <block class="Magento\Store\Block\Switcher" name="store_language" as="store_language" template="Magento_Store::switch/languages.phtml">
@@ -38,9 +38,16 @@
                     </block>                  
                 </container>              
             </container>               
-        </referenceContainer>      
-        <referenceContainer name="page.top">
-            <block class="Magento\Framework\View\Element\Template" name="ad.banner" template="Magento_Theme::html/slider.phtml" />       
-        </referenceContainer>
+        </referenceContainer> 
+         <referenceBlock name="top.links">
+            <block class="Magento\Framework\View\Element\Template" name="custom.icon" template="Magento_Wisthlist::html/minicart-icon.phtml" />
+            <block class="Magento\Wishlist\Block\Link" name="wish-list-link" after="my-account-link">
+                <arguments>
+                    <argument name="sortOrder" xsi:type="number">60</argument>
+                </arguments>
+            </block>
+        </referenceBlock>  
+
+
     </body>
 </page>
