--- a/app/design/frontend/Practice/ecomm/Magento_Theme/layout/default.xml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/layout/default.xml
@@ -1,23 +1,6 @@
-<?xml version="1.0"?>
-<!--
-/**
- * Bản quyền © Magento, Inc. Tất cả các quyền đã được bảo lưu.
- * Xem COPYING.txt để biết chi tiết về giấy phép.
- */
--->
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
-  <head>
-        <css src="css/custom.css"/>
-        <css src="slick-1.8.1/slick/slick.css"/>
-        <css src="slick-1.8.1/slick/slick-theme.css"/>
-        <script src="js/main.js" />
-        <script src="slick-1.8.1/slick/slick.min.js" type="text/javascript" />
-        <script src="https://code.jquery.com/jquery-3.5.1.min.js" src_type="url" type="text/javascript" />
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" src_type="url" type="text/javascript" />
-        <script src="https://code.jquery.com/jquery-migrate-1.2.1.min.js" src_type="url" type="text/javascript" />
-  </head>
     <body>
-        <referenceBlock name="logo">
+     <referenceBlock name="logo">
             <arguments>
                 <argument name="logo_file" xsi:type="string">images/mylogo.png</argument>
                 <argument name="logo_img_width" xsi:type="number">300</argument>
@@ -27,9 +10,9 @@
         </referenceBlock>
 
         <referenceContainer name="header.container">
-            <!-- Đây là referenceContainer cho banner quảng cáo -->
+          <!-- Đây là referenceContainer cho banner quảng cáo -->
             <block class="Magento\Framework\View\Element\Template" name="ad.banner" template="Magento_Theme::html/header-banner.phtml" before="header.panel.wrapper"/>
-            <container name="header.panel.wrapper" htmlClass="panel wrapper" htmlTag="div" before="-">
+                <container name="header.panel.wrapper" htmlClass="panel wrapper" htmlTag="div" before="-">
                  <container name="header.panel" label="Page Header Panel" htmlTag="div" htmlClass="panel header"> 
                     <block class="Magento\Store\Block\Switcher" name="store_language" as="store_language" template="Magento_Store::switch/languages.phtml">
                         <arguments>
@@ -38,16 +21,12 @@
                     </block>                  
                 </container>              
             </container>               
+        </referenceContainer>     
+        <referenceContainer name="page.top">
+            <block class="Magento\Framework\View\Element\Template" name="slider" template="Magento_Theme::html/slider.phtml"/>
+            <block class="Magento\Framework\View\Element\Template" name="selling.feature" template="Magento_Theme::html/selling-feature.phtml"/>
+            <block class="Magento\Framework\View\Element\Template" name="top.menu" template="Magento_Theme::html/topmenu.phtml"/>
+            <block class="Practice\ecomm\Block\ProductList" name="practice.ecomm.product.list" template="Magento_Theme::html/product_list.phtml"/>
         </referenceContainer> 
-         <referenceBlock name="top.links">
-            <block class="Magento\Framework\View\Element\Template" name="custom.icon" template="Magento_Wisthlist::html/minicart-icon.phtml" />
-            <block class="Magento\Wishlist\Block\Link" name="wish-list-link" after="my-account-link">
-                <arguments>
-                    <argument name="sortOrder" xsi:type="number">60</argument>
-                </arguments>
-            </block>
-        </referenceBlock>  
-
-
     </body>
 </page>
