--- a/app/design/frontend/Practice/ecomm/web/css/custom.css
+++ b/app/design/frontend/Practice/ecomm/web/css/custom.css
@@ -27,3 +27,12 @@
     height: auto;
 }
 
+.banner-container {
+    width: 100%;
+    height: 70px;
+}
+
+.banner-container > img {
+    width: 100%;
+    height: 70px;
+}
