--- a/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/header-banner.phtml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/header-banner.phtml
@@ -1,3 +1,5 @@
 <div class="banner-container">
-    <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
+    <div class="banner-block">
+        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
+    </div>
 </div>
