--- a/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/selling-feature.phtml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/selling-feature.phtml
@@ -15,7 +15,7 @@
         <div class="block">
             <div class="media list-features">
                 <h5>Thanh toán an toàn</h5>
-                <span>tiền mặt và thẻ</span>
+                <span>Tiền mặt và thẻ</span><br>
                 <span>Hỗ trợ và góp qua thẻ</span>
             </div>
         </div>
