--- a/app/design/frontend/Practice/ecomm/Magento_Theme/layout/default_head_blocks.xml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/layout/default_head_blocks.xml
@@ -1,14 +1,17 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
-        <css src="css/custom.css" type="text/css" /> 
+        <css src="css/styles-m.css"/>
+        <css src="css/styles-l.css" media="screen and (min-width: 768px)"/>
+        <css src="css/print.css" media="print"/>
+        <css src="css/custom.css" media="all"/>
         <css src="slick-1.8.1/slick/slick.css" type="text/css" />  
         <css src="slick-1.8.1/slick/slick-theme.css" type="text/css" />   
-        <link src="js/main.js" type="text/javascript" />
         
+
         <!-- Add external resources -->
+        <link src="js/main.js" type="text/javascript" />
+        <link src="slick-1.8.1/slick/slick.min.js" type="text/javascript" />
         <script src="//code.jquery.com/jquery-1.11.0.min.js" src_type="url" type="text/javascript" />
         <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js" src_type="url" type="text/javascript" />
-        <css src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" src_type="url" />
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js" src_type="url" />
     </head>
 </page>
