--- a/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/slider.phtml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/slider.phtml
@@ -1,8 +1,10 @@
-<div class="banner-a">
-    <div class="slider">
-        <img src="<?php echo $block->getViewFileUrl('images/B2B-PC-VN.png'); ?>" alt="Image 1" />
-        <img src="<?php echo $block->getViewFileUrl('images/W4_mb_vn.jpg'); ?>" alt="Image 2" />
-        <img src="<?php echo $block->getViewFileUrl('images/W3_pc_vn.jpg'); ?>" alt="Image 3" />
+<div class="multiple-items banner-a">
+    <div class="slider-wrapper">
+        <div class="slider">
+            <img src="<?php echo $block->getViewFileUrl('images/B2B-PC-VN.png'); ?>" alt="Image 1" />
+            <img src="<?php echo $block->getViewFileUrl('images/W4_mb_vn.jpg'); ?>" alt="Image 2" />
+            <img src="<?php echo $block->getViewFileUrl('images/W3_pc_vn.jpg'); ?>" alt="Image 3" />
+        </div>
     </div>
     <div class="abc">
         <img src="<?php echo $block->getViewFileUrl('images/B2B-PC-VN.png'); ?>" alt="Image 1" />
