--- a/app/design/frontend/Practice/ecomm/web/css/source/_new.less
+++ b/app/design/frontend/Practice/ecomm/web/css/source/_new.less
@@ -6,9 +6,7 @@ body {
 .banner-container {
     width: 100%;
     height: 70px;
-    justify-content: center; 
-    align-items: center;
-    display:flex;
+
 }
 .banner-block {
     width: 100%;
@@ -20,7 +18,7 @@ body {
     width: 100%;
     height: auto;
     object-fit: cover;
-    font-family: "object-fit: cover";
+    // font-family: "object-fit: cover";
 }
 
 .block-search {
@@ -115,10 +113,61 @@ body {
 
 .slider {
     width: 100%;
-  }
-  .slider .slick-slide img {
+}
+.slider .slick-slide img {
     height: 200px;
     width: 100%;
     object-fit: cover;
   }
   
+.banner-a .slick-prev,
+.banner-a .slick-next {
+width: 50px;
+height: 50px;
+z-index: 9999;
+opacity: 1;
+}
+
+.banner-a .slick-prev {
+left: 25px;
+}
+
+.banner-a .slick-next {
+right: 25px;
+}
+
+.product-container .slick-prev,
+.product-container .slick-next {
+width: 50px;
+height: 50px;
+z-index: 9999;
+opacity: 1;
+}
+
+.product-container .slick-prev {
+left: 25px;
+}
+
+.product-container .slick-next {
+right: 25px;
+}
+
+
+.image {
+    text-align: center;
+}
+.image .image-wrapper img,.image .image-block img {
+   object-fit: cover;
+   font-family: "object-fit: cover";
+   height: 100% !important;
+   width: 100% !important;
+}
+
+.image .image-wrapper{
+    display:flex;    
+    flex-direction: row;
+    justify-content: center;
+    gap: 25px;
+    margin-bottom: 25px;
+}
+
