--- a/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/topmenu.phtml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/topmenu.phtml
@@ -1,21 +1,22 @@
- 
-    <div class="menu-grid">
-        <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
-        </div>
-        <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
-        </div>
-        <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
-        </div>
-        <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
-        </div>
-        <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
-        </div>
-        <div class="menu-item">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
-        </div>
-    </div>
+<?php
+/**
+ * Copyright © Magento, Inc. All rights reserved.
+ * See COPYING.txt for license details.
+ */
+
+/**
+ * Top menu for store
+ *
+ * @var $block \Magento\Theme\Block\Html\Topmenu
+ */
+
+$columnsLimit = $block->getColumnsLimit() ?: 0;
+$_menuHtml = $block->getHtml('level-top', 'submenu', $columnsLimit)
+?>
+
+<nav class="navigation" data-action="navigation">
+    <ul data-mage-init='{"menu":{"responsive":true, "expanded":true, "position":{"my":"left top","at":"left bottom"}}}'>
+        <?= /* @noEscape */ $_menuHtml?>
+        <?= $block->getChildHtml() ?>
+    </ul>
+</nav>
