--- a/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/copyright.phtml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/copyright.phtml
@@ -1,1 +1,9 @@
-<span>© 2023 COCORO Life. Bản quyền thuộc về COCORO Life Việt Nam</span>
+<div class="footer-block">
+    <div class="footer-copyright">
+        <span>© 2023 COCORO Life. Bản quyền thuộc về COCORO Life Việt Nam</span>
+    </div>
+    <div class="footer-payment">
+        <span>Đối tác dịch vụ thanh toán</span>
+        <img src="<?php echo $block->getViewFileUrl('images/payoo.png'); ?>" alt="Banner Image">
+    </div>
+</div>
