--- a/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/selling-feature.phtml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/selling-feature.phtml
@@ -2,28 +2,46 @@
     <div class="container">
         <div class="block">
             <div class="media list-features">
-                <h5>Giao Hàng Miễn Phí</h5>
-                <span>Cho đơn hàng 2.000.000đ</span>
+                <div class="media-block">
+                    <img src="<?php echo $block->getViewFileUrl('images/Giao_h_ng_mi_n_ph_1_.png'); ?>" alt="Banner Image">
+                </div>
+                <div class="media-body">
+                    <h5>Giao Hàng Miễn Phí</h5>
+                    <span>Cho đơn hàng 2.000.000đ</span>
+                </div>
             </div>
         </div>
         <div class="block">
             <div class="media list-features">
-                <h5>Hàng Chính Hãng</h5>
-                <span>Xuất xứ rõ ràng</span>
+                <div class="media-block">
+                    <img src="<?php echo $block->getViewFileUrl('images/H_ng_ch_nh_h_ng_1_.png'); ?>" alt="Banner Image">
+                </div>
+                <div class="media-body">
+                    <h5>Hàng Chính Hãng</h5>
+                    <span>Xuất xứ rõ ràng</span>
+                </div>
             </div>
         </div>
         <div class="block">
             <div class="media list-features">
-                <h5>Thanh toán an toàn</h5>
-                <span>Tiền mặt và thẻ</span><br>
-                <span>Hỗ trợ và góp qua thẻ</span>
+                <div class="media-block">
+                    <img src="<?php echo $block->getViewFileUrl('images/Thanh_to_n_an_to_n_1_.png'); ?>" alt="Banner Image">
+                </div>
+                <div class="media-body">
+                    <h5>Thanh toán an toàn</h5>
+                    <span>Tiền mặt và thẻ <br> Hỗ trợ và góp qua thẻ</span>
+                </div>
             </div>
         </div>
         <div class="block">
             <div class="media list-features">
-                <h5>Tổng đài CSKH</h5>
-                <span>9:00 - 18:00</span>
-                <span>Thứ 2 - Thứ 6</span>
+                <div class="media-block">
+                    <img src="<?php echo $block->getViewFileUrl('images/CSKH_1_.png'); ?>" alt="Banner Image">
+                </div>
+                <div class="media-body">
+                    <h5>Tổng đài CSKH</h5>
+                    <span>9:00 - 18:00 <br> Thứ 2 - Thứ 6</span>
+                </div>
             </div>
         </div>
     </div>
