--- a/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/slider.phtml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/slider.phtml
@@ -1,13 +1,11 @@
-<div class="multiple-items banner-a">
-    <div class="slider-wrapper">
+<div class="banner-wrapper">
         <div class="slider">
-            <img src="<?php echo $block->getViewFileUrl('images/B2B-PC-VN.png'); ?>" alt="Image 1" />
-            <img src="<?php echo $block->getViewFileUrl('images/W4_mb_vn.jpg'); ?>" alt="Image 2" />
-            <img src="<?php echo $block->getViewFileUrl('images/W3_pc_vn.jpg'); ?>" alt="Image 3" />
+            <img src="<?php echo $block->getViewFileUrl('images/W1_pc_vn.jpg'); ?>" alt="Image 1" />
+            <img src="<?php echo $block->getViewFileUrl('images/W2_pc_vn.jpg'); ?>" alt="Image 2" />
+            <img src="<?php echo $block->getViewFileUrl('images/t_ng_h_p_vn_pc.jpg'); ?>" alt="Image 3" />
         </div>
-    </div>
-    <div class="abc">
-        <img src="<?php echo $block->getViewFileUrl('images/B2B-PC-VN.png'); ?>" alt="Image 1" />
-        <img src="<?php echo $block->getViewFileUrl('images/W4_mb_vn.jpg'); ?>" alt="Image 2" />
+    <div class="banner-right">
+        <img src="<?php echo $block->getViewFileUrl('images/banner_2_Ch_o_m_ng_th_nh_vi_n_m_i_.png'); ?>" alt="Image 1" />
+        <img src="<?php echo $block->getViewFileUrl('images/banner_3_gi_m_s_u_th_4_vi_t_.jpg'); ?>" alt="Image 2" />
     </div>
 </div>
