--- a/app/design/frontend/Practice/ecomm/Magento_Theme/layout/default_head_blocks.xml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/layout/default_head_blocks.xml
@@ -6,7 +6,7 @@
         <css src="css/custom.css" media="all"/>
         <css src="slick-1.8.1/slick/slick.css" type="text/css" />  
         <css src="slick-1.8.1/slick/slick-theme.css" type="text/css" />   
-        
+        <css src="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" src_type="url"/>
 
         <!-- Add external resources -->
         <link src="js/main.js" type="text/javascript" />
