--- a/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/best_price_slider_product.phtml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/best_price_slider_product.phtml
@@ -23,10 +23,16 @@ $randomProductIds = [1, 2, 3, 4, 5, 6, 7, 8];
                 ->getUrl();
             ?>
             <div class="product-info">
-                <img src="<?= $image_url ?>" alt="<?= $product->getName() ?>">
+                <div class="product-image">
+                    <img src="<?= $image_url ?>" alt="<?= $product->getName() ?>">
+                    <div class="product-actions">
+                        <div class="cart-button"><i class="fa fa-shopping-cart"></i></div>
+                        <div class="wishlist-button"><i class="fa-regular fa-heart"></i></div>
+                    </div>
+                </div>
                 <h4><?= $product->getName() ?></h4>
-                <p>SKU: <?= $product->getSku() ?></p>
-                <p>Giá: <?= $product->getPrice() ?></p>
+                <p><?= $product->getSku() ?></p>
+                <p><?= $product->getPrice() ?></p>
             </div>
             <?php
         } else {
