--- a/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/header-banner.phtml
+++ b/app/design/frontend/Practice/ecomm/Magento_Theme/templates/html/header-banner.phtml
@@ -1,3 +1,3 @@
     <div class="banner-block">
-        <img src="<?php echo $block->getViewFileUrl('images/banner.png'); ?>" alt="Banner Image">
+        <img src="<?php echo $block->getViewFileUrl('images/top_banner-pc_vi_t_.png'); ?>" alt="Banner Image">
     </div>
